# proxy-machine

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit  pre-push
assets/: layouts.json  profiles.json
benchmarks/: baseline.json  current.json  post-refactor.json
docs/: AI_PROJECT_DESCRIPTION.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  MIGRATION_VERIFICATION.md  PRE_GITHUB_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SESSION_TEMPLATE.md  UNRAID_DEPLOYMENT.md
scripts/: deploy-to-unraid.sh  prepare-for-github.sh  remote_db_client.py  remote_db_server.py  sanitize-for-github.sh  setup-friend-client.sh  setup-samba-share.sh  setup-tailscale-server.sh
src/: bulk_paths.py  config_paths.py  constants.py  create_pdf.py  dashboard.py  errors.py  progress.py  result.py  scryfall_enrich.py  utilities.py
tools/: __init__.py  advanced_search.py  asset_sync.py  bench_report.py  card_details.py  cards.py  collection_insights.py  db.py  detect_duplicates.py  discord_monitor.py  doctor.py  error_tracker.py  fetch_bulk.py  fetch_bulk_with_server.py  generate_cli_docs.py  generate_coverage_badge.py  generate_schema_docs.py  helpful_errors.py  hobby_features.py  logging_config.py  mtg_progress.py  notify_test.py  optimize_db.py  optimize_images.py  organize_sld.py  plugin_demo.py  populate_token_relationships.py  profile_stats.py  query_relationships.py  (+18 more)
(+169 files in other folders)
