[project]
name = "proxy-machine"
version = "1.0.0"
description = "CLI-first Python application for managing Magic: The Gathering proxy card generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click==8.1.8",
    "natsort==8.4.0",
    "numpy>=1.26.0",
    "Pillow==11.3.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.6.1",
    "Requests==2.32.3",
    "pypdfium2==4.30.0",
    "split-image==2.0.1",
    "Flask==3.0.3",
    "Flask-WTF==1.2.1",
    "Flask-Limiter==3.5.1",
    "ImageHash==4.3.1",
    "opencv-python-headless==4.10.0.84",
    "psutil==5.9.8",
    "alembic==1.13.1",
    "loguru==0.7.2",
    "diskcache==5.6.3",
    "bcrypt==4.2.0",
]

[project.optional-dependencies]
dev = [
    "pyright[nodejs]==1.1.406",
    "pytest==8.3.3",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pyright]
pythonVersion = "3.9"
